--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 	<head>
-		
+		<link rel="stylesheet" href="estilo.css">		
 	</head>
 	
 	<body>
 		<h1> 
-			Git tutorial w3schools
+			Git tutorial w3schools.
 		</h1>
+		<div id="principal-iomage">
+			<img src="images/git-and-github.png" alt="git-image" style="width:100%;max-width:960px">
+		</div>
 	</body>
 </html>
