--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<h1> 
 			Git tutorial w3schools.
 		</h1>
+		<h2>Git y Github</h2>
 		<div id="principal-iomage">
 			<img src="images/git-and-github.png" alt="git-image" style="width:100%;max-width:960px">
 		</div>
