--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="estilo.css">		
+		<link rel="stylesheet" href="estilo.css">			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	</head>
 	
 	<body>
@@ -8,8 +8,114 @@
 			Git tutorial w3schools.
 		</h1>
 		<h2>Git y Github</h2>
-		<div id="principal-iomage">
+		<div id="principal-image">
 			<img src="images/git-and-github.png" alt="git-image" style="width:100%;max-width:960px">
+		</div>
+
+		<div>
+			<h2>¿Qué es Git?</h2>
+			<p id="presentacion">
+				Git es una tecnología usa da para el control de versiones en el desarrollo de software, fue creado por Linus Torvalds y está pensado para el trabajo remoto en equipo y tener control total sobre las distintas versiones de un producto. Puede usarse de manera local, pero su gran poder radica en manejar repositorios remotos con ayuda de plataformas como por ejemplo GitHub o GitLab.
+			</p>
+			<h2>Principales Comandos</h2>
+		</div id="tabla-pri">
+		<div style="margin:20px;" id="comandos">
+			<table class="table table-bordered table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Comando</th>
+      <th scope="col">Descripcion</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>git --version</td>
+      <td>Muetra en pantalla la versión de git que tenemos instalado</td>
+    </tr>
+    <tr>
+      <td>git init</td>
+      <td>Inicia un repositorio local de git</td>   
+    </tr>
+    <tr>
+	<td>git config user.name "nombre de usuario"</td>
+	<td>configura el nombre del usuario del repositorio local</td>
+    <tr>
+        <td>git config user.email "email de usuario"</td>
+        <td>configura el email del usuario del repositorio local</td>
+    <tr>
+        <td>git status</td>
+        <td>mustra el estado de los archivos y directorios del proyecto, en verde los trackeados y rojos los untracked</td>
+    </tr>
+      <tr>
+	      <td>git add "archivo" </td>
+        <td>añade un archivo al stagin area se puede modificar con -A para agregar todos de una sola vez</td>
+    </tr>
+        <tr>
+      <td>git commit -m "cometario"</td>
+      <td>Confirma los cambios y genera un "punto de guardado" o commit area</td>
+    </tr>
+        <tr>
+      <td>git log</td>
+      <td>Para ver el historial de commits en el repositorio local</td>
+    </tr>
+        <tr>
+      <td>git help --all</td>
+      <td>Muestra la documentacion para usar los comandos de git</td>
+    </tr>
+      <tr>
+      <td>git branch "nueva-rama"</td>
+      <td>Crea una nueva rama de trabajo</td>
+    </tr>
+
+<tr>
+      <td>git branch</td>
+      <td>Lista todas las ramas existentte es un repositorio local</td>
+    </tr>
+    <tr>
+      <td>git checkout "nueva-rama"</td>
+      <td>Sirve para moverse entre ramas</td>
+    </tr>
+    <tr>
+      <td>git merge "nueva rama"</td>
+      <td>Une 2 ramas existentes en una sola generalmente la master</td>
+    </tr>
+<tr>
+      <td>git branch -d "nueva-rama"</td>
+      <td>Sirve para borrar una rama</td>
+    </tr>
+
+<tr>
+      <td>git remote add origin "url"</td>
+      <td>Agrega un repositorio remoto</td>
+    </tr>
+<tr>
+      <td>git push --set-upstream origin master</td>
+      <td>sube los cambios al repositorio remoto</td>
+    </tr>
+<tr>
+      <td>git pull origin</td>
+      <td>Actualiza el repositorio local</td>
+    </tr>
+<tr>
+      <td>git push origin</td>
+      <td>Sube los cambios al repositorio remoto</td>
+    </tr>
+<tr>
+      <td>git clone URL</td>
+      <td>Clona un repositorio remoto al local</td>
+    </tr>
+	<tr>
+      <td>git revert HEAD</td>
+      <td>Mueve el puntero HEAD al commit anterior</td>
+    </tr>
+	    </tr>
+        <tr>
+      <td>git reset  "hexa-key"</td>
+      <td>Mueve el puntero HEAD al commit que se indica para revertir cambios</td>
+    </tr>
+
+  </tbody>
+</table>
 		</div>
 	</body>
 </html>
