--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	
 	<body>
-		<h1> 
+		<h1 id="titu"> 
 			Git tutorial w3schools.
 		</h1>
 		<h2>Git y Github</h2>
@@ -118,4 +118,5 @@
 </table>
 		</div>
 	</body>
+	<footer>FerDev - 2021</footer>
 </html>
